# ot-harjoitustyo-s2023

./: .coveragearc  .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
data/: database.sqlite  exercises.json
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  tekoaly.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: matkakortti.md  monopoli.md
src/: build.py  config.py  index.py  initialize_database.py
src/entities/: exercise.py  game.py  parser.py  question_generator.py  user.py
src/repositories/: exercise_repository.py  user_repository.py
src/services/: exercise_service.py  game_service.py  user_service.py
src/tests/: exercise_test.py  game_test.py  user_test.py
src/tests/entities/: exercise_test.py  game_test.py  parser_test.py  question_generator_test.py  test_data.json  user_test.py
src/tests/repositories/: exercise_repository_test.py  test_json.json
src/tests/services/: game_service_test.py  user_service_test.py
src/ui/: choose_difficulty_view.py  config.py  database_connection.py  exercise_view.py  game_view.py  login_view.py  ui.py
