[tool.poetry]
name = "viikko2"
version = "0.1.0"
description = ""
authors = ["immone <antti.imm1n@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
